[package]
name = "influx-write"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", optional = true }
thiserror = "1.0"
url = "2.5"
http = { version = "1.1" }
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
mockito = "1.4.0"
tokio = "1.37.0"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
reqwest-blocking = ["dep:reqwest", "reqwest/blocking"]